Fix the title badge size and let the title text overflow with ellipsis

--- a/packages/edit-site/src/components/page-pages/style.scss
+++ b/packages/edit-site/src/components/page-pages/style.scss
@@ -52,6 +52,11 @@
 	}
 }
 
+.edit-site-page-pages-title span {
+	text-overflow: ellipsis;
+	overflow: hidden;
+}
+
 .edit-site-page-pages__title-badge {
 	background: $gray-100;
 	color: $gray-700;
@@ -60,5 +65,5 @@
 	border-radius: $radius-block-ui;
 	font-size: 12px;
 	font-weight: 400;
-	width: fit-content;
+	min-width: 80px !important; // Override HStack min-width: 0
 }
